# cvm

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  GET_STARTED.md  JAVA_VERSION_TEST_SUMMARY.md  LICENSE  MANUAL_SHELL_TEST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  TESTING.md  build  config.toml  install-binary.sh  install.sh  jcvm.sh  show-structure.sh  test-java-version-auto-switch.sh  test.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  ci.yml  codeql.yml  docs.yml  manual-version-bump.yml  nightly.yml  release.yml  version-bump.yml
docs/: ARCHITECTURE.md  NODEJS_PLUGIN_PRODUCTION_READY.md  PLUGIN_DEVELOPMENT.md  PYTHON_PLUGIN_PRODUCTION_READY.md  QUICK_START_NODEJS_PLUGIN.md  RELEASE.md  ROADMAP.md  VERSION_MANAGEMENT.md
examples/: README.md
scripts/: README.md  bump-version.sh  install-binary.sh  install.sh  test-auto-switch-integration.sh  test-java-version-auto-switch.sh  test-python-integration.sh  test-shell-integration.sh
src/: api.rs  cli.rs  config.rs  detect.rs  download.rs  error.rs  install.rs  main.rs  models.rs  shell.rs  tool_manager.rs  utils.rs  version_manager.rs
src/core/: mod.rs  plugin.rs  traits.rs
src/plugins/: mod.rs
src/plugins/java/: api.rs  detector.rs  installer.rs  mod.rs
src/plugins/nodejs/: api.rs  detector.rs  installer.rs  mod.rs
src/plugins/python/: api.rs  detector.rs  installer.rs  mod.rs
